--- a/RandomPassword/index.html
+++ b/RandomPassword/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="VaultKey is a secure password generator for everyone. No tracking, no storage – just safe, random passwords generated instantly." />
     <title>RandomPassword</title>
   </head>
   <body>
