--- a/RandomPassword/index.html
+++ b/RandomPassword/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="VaultKey is a secure password generator for everyone. No tracking, no storage – just safe, random passwords generated instantly." />
+    <meta name="description" content="YourVaultPass is a secure password generator for everyone. No tracking, no storage – just safe, random passwords generated instantly." />
     <title>RandomPassword</title>
   </head>
   <body>
